--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>Gamedev Canvas Workshop</title>
+    <title>New Breakout Game</title>
     <style>
       * {
         padding: 0;
